snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha256
c48e72206c6c6fafd38e4da3f72a88c4f4f08ed53b8e681494262a8361949a1b